--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
 
   <!--Global Css -->
   <link rel="stylesheet" type="text/css" href="./styles.css">
-
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
