--- a/src/elements.html
+++ b/src/elements.html
@@ -3,6 +3,8 @@
 <link rel="import" href="bower_components/paper-input/paper-input.html">
 <link rel="import" href="bower_components/paper-time-picker/paper-time-picker.html">
 <link rel="import" href="bower_components/paper-tooltip/paper-tooltip.html">
+<link rel="import" href="bower_components/paper-radio-button/paper-radio-button.html">
+<link rel="import" href="bower_components/paper-radio-group/paper-radio-group.html">
 <link rel="import" href="bower_components/paper-styles/color.html">
 <link rel="import" href="bower_components/paper-styles/typography.html">
 <link rel="import" href="bower_components/polymer/polymer.html">
